B-F Backup Sandbox 30.4.12/src/objects/Brand__c.object
<CustomObject>
    <description>Used by CRM.
NPA Rollout: Used to store Brands.</description>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <description>INFOWELDERS: Used by CRM.
NPA Rollout: Used to store the Brand code.</description>
        <externalId>true</externalId>
        <inlineHelpText>Brand Major code</inlineHelpText>
        <label>Brand Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked is active.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Brand_Code_AU__c</fullName>
        <description>Legacy Code used to identify the brand</description>
        <label>Legacy Brand Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spirit_Type__c</fullName>
        <description>Infowelders</description>
        <label>Spirit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bourbon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian / Blend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotch / Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquers / Cordials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rum / Gin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tequila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vodka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders:Used by CRM.
NPA Rollout: Used to refer to Supplier.</description>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Supplier__c</columns>
        <columns>NAME</columns>
        <columns>Spirit_Type__c</columns>
        <columns>Brand_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>B_F_Brands</fullName>
        <columns>NAME</columns>
        <columns>Brand_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Supplier__c</field>
            <operation>equals</operation>
            <value>B-F</value>
        </filters>
        <label>B-F Brands</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China_Product</fullName>
        <columns>Supplier__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Brand_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>CNY</value>
        </filters>
        <label>China_Product</label>
        <language>zh_CN</language>
        <sharedTo>
            <group>CHN-All Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IV00000004PiqMAE_00NV0000000KobIMAS</fullName>
        <active>true</active>
        <field>Order_Item__c.Brand__c</field>
        <filterItems>
            <field>Brand__c.Supplier__r.Name</field>
            <operation>equals</operation>
            <value>B-F</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Order Item_Brand</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IV00000004SvtMAE_00NV0000000LZ05MAG</fullName>
        <active>true</active>
        <field>Group_Promotions__c.Brand__c</field>
        <filterItems>
            <field>Brand__c.Supplier__r.Name</field>
            <operation>equals</operation>
            <value>B-F</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Group Promotion_Brand</name>
    </namedFilters>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>